<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="hms_abort">Stop</string>
    <string name="hms_abort_message">Stop downloading?</string>
    <string name="hms_bindfaildlg_message">%1$s is unable to use Huawei Mobile Services. Please launch Phone Manager or go to Settings, enable all permissions for %2$s (including auto-launch and secondary launch), and try again.</string>
    <string name="hms_cancel">Cancel</string>
    <string name="hms_check_failure">Failed to check for updates.</string>
    <string name="hms_check_no_update">You are already using the latest version.</string>
    <string name="hms_checking">Checking for updates…</string>
    <string name="hms_confirm">OK</string>
    <string name="hms_download_failure">Failed to download Huawei Mobile Services package.</string>
    <string name="hms_download_no_space">Not enough free space. Download cannot be completed.</string>
    <string name="hms_download_retry">Download failed. Try again?</string>
    <string name="hms_downloading">Downloading Huawei Mobile Services\nprogress: %d%%</string>
    <string name="hms_downloading_new">Downloading HMS</string>
    <string name="hms_install">Install</string>
    <string name="hms_install_message">Huawei Mobile Services must be installed to use this feature. Install?</string>
    <string name="hms_retry">Retry</string>
    <string name="hms_update">Update</string>
    <string name="hms_update_message">Update to the latest version of Huawei Mobile Services to use this feature. Update now?</string>
    <string name="hms_update_message_new">This service requires the latest version of the following app:\n\n%1$s</string>
    <string name="hms_update_title">Huawei Mobile Services</string>
    <string name="strNetworkTipsCancelBtn">取消</string>
    <string name="strNetworkTipsConfirmBtn">继续下载</string>
    <string name="strNetworkTipsMessage">你已切换到移动网络，是否继续当前下载？</string>
    <string name="strNetworkTipsTitle">网络提示</string>
    <string name="strNotificationClickToContinue">继续下载</string>
    <string name="strNotificationClickToInstall">点击安装</string>
    <string name="strNotificationClickToRetry">点击重试</string>
    <string name="strNotificationClickToView">点击查看</string>
    <string name="strNotificationDownloadError">下载失败</string>
    <string name="strNotificationDownloadSucc">下载完成</string>
    <string name="strNotificationDownloading">正在下载</string>
    <string name="strNotificationHaveNewVersion">有新版本</string>
    <string name="strToastCheckUpgradeError">检查新版本失败，请稍后重试</string>
    <string name="strToastCheckingUpgrade">正在检查，请稍候...</string>
    <string name="strToastYourAreTheLatestVersion">你已经是最新版了</string>
    <string name="strUpgradeDialogCancelBtn">下次再说</string>
    <string name="strUpgradeDialogContinueBtn">继续</string>
    <string name="strUpgradeDialogFeatureLabel">更新说明</string>
    <string name="strUpgradeDialogFileSizeLabel">包大小</string>
    <string name="strUpgradeDialogInstallBtn">安装</string>
    <string name="strUpgradeDialogRetryBtn">重试</string>
    <string name="strUpgradeDialogUpdateTimeLabel">更新时间</string>
    <string name="strUpgradeDialogUpgradeBtn">立即更新</string>
    <string name="strUpgradeDialogVersionLabel">版本</string>
    <string name="album_name_all">All Media</string>
    <string name="button_apply">Apply(%1$d)</string>
    <string name="button_apply_default">Apply</string>
    <string name="button_back">Back</string>
    <string name="button_confirm">Confirm(%1$d/%2$d)</string>
    <string name="button_done">Done</string>
    <string name="button_ok">OK</string>
    <string name="button_preview">Preview</string>
    <string name="cube_ptr_hours_ago"> hours ago</string>
    <string name="cube_ptr_last_update">last update: </string>
    <string name="cube_ptr_minutes_ago"> minutes ago</string>
    <string name="cube_ptr_pull_down">Pull Down</string>
    <string name="cube_ptr_pull_down_to_refresh">Pull Down to Refresh</string>
    <string name="cube_ptr_refresh_complete">Updated.</string>
    <string name="cube_ptr_refreshing">Updating...</string>
    <string name="cube_ptr_release_to_refresh">Release To Refresh</string>
    <string name="cube_ptr_seconds_ago"> seconds ago</string>
    <string name="empty_text">No media yet</string>
    <string name="error_file_type">Unsupported file type</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="error_no_video_activity">No App found supporting video preview</string>
    <string name="error_over_count">You can only select up to %1$d media files</string>
    <string name="error_over_count_default">You have reached max selectable</string>
    <string name="error_over_quality">Over quality</string>
    <string name="error_type_conflict">Can\'t select images and videos at the same time</string>
    <string name="error_under_quality">Under quality</string>
    <string name="error_video_length">file length should be no more than %1$s minute</string>
    <string name="error_video_size">file size should be no more than %1$sM</string>
    <string name="photo_grid_capture">Camera</string>
    <string name="ucrop_label_edit_photo">Edit Photo</string>
    <string name="ucrop_label_original">Original</string>
    <string name="ucrop_menu_crop">Crop</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="app_name">最右</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="assessor_tips">拥有此标识\n就是一名萌萌哒的审帖员呦~</string>
    <string name="audio_transform">正在语音转文字…</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="by_author">by %s</string>
    <string name="cancel">取消</string>
    <string name="cancel_collection">取消收藏</string>
    <string name="cancel_follow">取消关注</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="cloudpush_app_name">Push Service</string>
    <string name="data_loading">加载中...</string>
    <string name="delete_msg">删除回复</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_msg">消息</string>
    <string name="dialog_title">提示</string>
    <string name="discovery">发现</string>
    <string name="download_tip">请到\"我的下载\"中查看</string>
    <string name="dsv_ex_msg_adapter_wrong_recycler">InfiniteScrollAdapter is supposed to work only with DiscreteScrollView</string>
    <string name="dsv_ex_msg_dont_set_lm">You should not set LayoutManager on DiscreteScrollView.class instance. Library uses a special one. Just don\'t call the method.</string>
    <string name="emotion_info">左右滑动更换心情</string>
    <string name="empty" />
    <string name="follow_create_tip1">已超出%s字</string>
    <string name="follow_create_tip2">还可以输入%s字</string>
    <string name="follow_post">跟帖</string>
    <string name="follow_post_count">%s跟帖</string>
    <string name="follow_post_count_space">%s 跟帖</string>
    <string name="follow_post_count_text">%s人正在跟帖</string>
    <string name="follow_post_fav">赞过</string>
    <string name="follow_post_img_count">%s图</string>
    <string name="follow_post_subject">主题</string>
    <string name="go_to_setting">去设置</string>
    <string name="hms_bindfaildlg_title">@string/hms_update_title</string>
    <string name="hollow">Hi, 这里是匿名树洞\n发你想发的 \n说你想说的\n这里的人都超可爱的</string>
    <string name="hollow_default_reply">匿名送个温暖吧</string>
    <string name="hollow_no_reply">这个树洞有点冷</string>
    <string name="hollow_publish_success">小秘密埋藏成功</string>
    <string name="hollow_reply_hint">大侠请留下您的匿名回复</string>
    <string name="hollow_welcome">欢迎来到树洞！</string>
    <string name="hwpush_ability_value">successRateAnalytics</string>
    <string name="hwpush_cancel">Cancel</string>
    <string name="hwpush_collect">Favorite</string>
    <string name="hwpush_collect_tip">A Favorites icon will be created on the home screen. You can touch the icon to view all your favorite notifications.</string>
    <string name="hwpush_collect_tip_known">OK</string>
    <string name="hwpush_delete">Delete</string>
    <string name="hwpush_deltitle">Delete notifications</string>
    <string name="hwpush_dialog_limit_message">A maximum of 1000 favorite notifications can be saved. Delete some notifications before you can add new ones. Go to your favorite notifications list?</string>
    <string name="hwpush_dialog_limit_ok">Go</string>
    <string name="hwpush_dialog_limit_title">Note</string>
    <string name="hwpush_forward">Forward</string>
    <string name="hwpush_goback">Back</string>
    <string name="hwpush_loading_title">Loading... Please wait.</string>
    <string name="hwpush_msg_collect">Favorites</string>
    <string name="hwpush_msg_favorites">Favorite notifications</string>
    <string name="hwpush_no_collection">No favorite notifications</string>
    <string name="hwpush_refresh">Refresh</string>
    <string name="hwpush_request_provider_permission">Store messages</string>
    <string name="hwpush_richmedia">Rich media</string>
    <string name="hwpush_selectall">Select all</string>
    <string name="hwpush_unselectall">Deselect all</string>
    <string name="ijkplayer_dummy" />
    <string name="image">image</string>
    <string name="long_text_test">少年不识愁滋味，爱上层楼。爱上层楼。为赋新词强说愁。而今识尽愁滋味，欲说还休。欲说还休。却道天凉好个秋。</string>
    <string name="permission_setting_title">录音失败,请去设置中打开录音权限?</string>
    <string name="press_say">按住说</string>
    <string name="record_again">重录</string>
    <string name="reply">回复</string>
    <string name="time">0“</string>
    <string name="tree_hole">树洞</string>
    <string name="try_listen">试听</string>
    <string name="version_default">默认风格</string>
    <string name="version_type_a">风格 A</string>
    <string name="version_type_b">风格 B</string>
</resources>