<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center_horizontal" android:orientation="vertical" android:background="#ffffff" android:layout_width="200dp" android:layout_height="80dp">
    <TextView android:gravity="center" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permission_setting_title"/>
    <LinearLayout android:gravity="center_vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:gravity="center" android:id="@+id/cancel" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/cancel" android:layout_weight="1"/>
        <TextView android:gravity="center" android:id="@+id/go_to_setting" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/go_to_setting" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
