<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_gravity="center" android:orientation="vertical" android:background="@color/CB" android:paddingLeft="10dp" android:paddingTop="5dp" android:paddingRight="10dp" android:paddingBottom="10dp" android:layout_width="300dp" android:layout_height="wrap_content">
    <TextView android:textSize="20sp" android:textColor="@color/CM" android:id="@+id/dialog_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="15dp" android:text="@string/dialog_title"/>
    <View android:id="@+id/dividerLine" android:background="@color/CL" android:layout_width="match_parent" android:layout_height="2dp"/>
    <TextView android:textSize="16sp" android:textColor="@color/CT_3" android:id="@+id/dialog_msg" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="15dp" android:text="@string/dialog_msg" android:lineSpacingExtra="2dp"/>
    <View android:id="@+id/split_horizonal" android:background="@color/CL" android:layout_width="match_parent" android:layout_height="1px"/>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="15sp" android:textColor="@color/CT_3" android:gravity="center" android:id="@+id/dialog_cancel" android:layout_width="0dp" android:layout_height="48dp" android:text="@string/dialog_cancel" android:layout_weight="1"/>
        <View android:id="@+id/viewButtonDivider" android:background="@color/CL" android:layout_width="1px" android:layout_height="47dp"/>
        <TextView android:textSize="15sp" android:textColor="@color/CT_3" android:gravity="center" android:id="@+id/dialog_confirm" android:layout_width="0dp" android:layout_height="48dp" android:text="@string/dialog_confirm" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
